# Aenertia

./: .env  note.md
Control/src/: main.cpp  step.h
ControlCodeBot1/src/: main.cpp
ControlCodeBot2/: platformio.ini
ControlCodeBot2/src/: main.cpp
Logbooks/: AD_logbook.md
Logbooks/BB_Logbook/MQTT_CV_test/: battery_log.csv  global_var.py  mqtt_serial_bridge.py
PowerMonitoring/BatteryLog/: tilt_log_kd100.csv  tilt_log_kd35.csv  tilt_log_kd70.csv  tilt_log_kp1000.csv  tilt_log_kp200.csv  tilt_log_kp3000.csv  tilt_log_kp_o0.002.csv  tilt_log_kp_o0.004.csv  tilt_log_kp_o0.01.csv  tilt_log_kp_y100.csv  tilt_log_kp_y25.csv  tilt_log_kp_y5.csv  tilt_plot.m
Robot_Functions/ROS2/: Launch_Commands.md  nav2_tests.md
Robot_Functions/ROS2/gbot_ws/: frames_2025-06-14_21.04.09.gv
Robot_Functions/ROS2/gbot_ws/src/mybot_nav/: package.xml  setup.cfg  setup.py
Robot_Functions/ROS2/gbot_ws/src/mybot_nav/launch/: bringup.launch.py
Robot_Functions/ROS2/gbot_ws/src/mybot_nav/mybot_nav/: mqtt_serial_bridge.py  nav_to_pose.py  pose_saver.py
Robot_Functions/ROS2/gbot_ws/src/mybot_nav/mybot_nav/Advanced_CV/: pose_detection.py
Robot_Functions/ROS2/gbot_ws/src/mybot_nav/mybot_nav/config/: nav2_params.yaml
UI_And_Communication/UI communication/: index.html
UI_And_Communication/UI communication/static/: style.css
UI_And_Communication/UI_communication/: index.html
UI_And_Communication/UI_communication/static/: mqtt-control.js  style.css  voice_server.py
esp32-starter/src/: main.cpp
server/: api.py
server/database/: dynamodb.py
(+34 files in other folders)
